welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: Missing closing brace `}' assumed here
def faireMotif(){
^PictureMono2:3: error: expected class or object definition
def faireMotif(){
^PictureMono2:33: error: expected start of definition
override def run() {
         ^